--- a/css/styles.css
+++ b/css/styles.css
@@ -1,49 +1,70 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p,ul{
-	font-family: Arial, Helvetica, sans-serif;
+body,
+td,
+th,
+p,
+ul {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 0.9em;
   font-weight: 500;
-	color: #2C2F3F;
+  color: #2c2f3f;
 }
 
 body {
-	background-color: #2C2F3F;
+  background-color: #2c2f3f;
   margin: 0;
   padding: 0;
-	position:relative;
+  position: relative;
 }
 li {
-	font-family: Arial, Helvetica, sans-serif;
-	color: #2C2F3F;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #2c2f3f;
 }
 a {
-	color: white;
-	text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
-a:hover, a:focus {
-	color: #B73C37;
-	text-decoration: none;
+a:hover,
+a:focus {
+  color: #b73c37;
+  text-decoration: none;
 }
 
-a img{
-	border: none 0px white;
+a img {
+  border: none 0px white;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 #maincontent {
   min-height: 100%;
 }
 
 #footer {
-  background-color: #97939A;
-  color: #2C2F3F;
+  background-color: #97939a;
+  color: #2c2f3f;
   width: 100%;
   height: 125px;
   display: flex;
@@ -69,7 +90,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 nav {
   width: 100%;
   height: 125px;
-  background-color: #2C2F3F;
+  background-color: #2c2f3f;
   display: flex;
   flex-wrap: wrap;
   align-content: center;
@@ -77,7 +98,7 @@ nav {
 }
 
 nav h1 {
-  text-align: center; 
+  text-align: center;
   margin: auto 9%;
 }
 
@@ -89,7 +110,7 @@ nav h1 a {
 
 #breadcrumb {
   list-style: none;
-  background-color: #B73C37;
+  background-color: #b73c37;
   margin: 0;
   display: flex;
   height: 75px;
@@ -100,28 +121,27 @@ nav h1 a {
 
 /* Display list items side by side */
 #breadcrumb li {
-    display: inline;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    font-weight: 600;
-    
+  display: inline;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-weight: 600;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
-    padding: 6px;
-    content: "/";
-    font-weight: bold;
+#breadcrumb li + li:before {
+  padding: 6px;
+  content: "/";
+  font-weight: bold;
 }
 
 #breadcrumb li a {
-    text-decoration: none;
-    padding-left: 0;
+  text-decoration: none;
+  padding-left: 0;
 }
 
 /* ====================== Map ====================== */
 #map-container {
-  background-color: #97939A;
+  background-color: #97939a;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -144,12 +164,12 @@ nav h1 a {
 .filter-options {
   width: 100%;
   height: 100px;
-  background-color: #B73C37;
+  background-color: #b73c37;
   margin: 0;
 }
 
 .filter-options h2 {
-  color: #2C2F3F;
+  color: #2c2f3f;
   text-align: start;
   font-weight: bold;
   line-height: 1;
@@ -167,9 +187,9 @@ nav h1 a {
 }
 
 .filter-selectors select {
-  background-color: #97939A;
+  background-color: #97939a;
   color: white;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 1em;
   font-weight: 500;
   text-align-last: center;
@@ -186,7 +206,7 @@ nav h1 a {
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
-  background-color: #2C2F3F;
+  background-color: #2c2f3f;
   margin: 8% 1% 8% 1%;
   padding: 0%;
   display: flex;
@@ -197,7 +217,7 @@ nav h1 a {
 }
 
 #restaurants-list li {
-  background-color: #EDE5CF;
+  background-color: #ede5cf;
   font-family: Arial, Helvetica, sans-serif;
   margin: 3% 1%;
   max-width: 96%;
@@ -213,7 +233,7 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: #2C2F3F;
+  color: #2c2f3f;
   font-family: Arial, Helvetica, sans-serif;
   margin: 8% 2%;
   font-size: 1.25em;
@@ -224,7 +244,7 @@ nav h1 a {
 }
 
 #restaurants-list .restaurant-img {
-  background-color: #97939A;
+  background-color: #97939a;
   display: block;
   margin: 0;
   max-width: 100%;
@@ -234,7 +254,7 @@ nav h1 a {
 
 #restaurants-list h3 {
   margin: 5% 5% 0 5%;
-  color: #97939A;
+  color: #97939a;
   text-align: end;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -246,7 +266,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: #FCA536;
+  background-color: #fca536;
   color: white;
   width: 100%;
   height: 75px;
@@ -273,7 +293,7 @@ nav h1 a {
 
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-weight: 600;
   letter-spacing: 3px;
   text-transform: uppercase;
@@ -281,18 +301,18 @@ nav h1 a {
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 95%;
+  width: 95%;
 }
 
 #restaurant-cuisine {
-  background-color: #B73C37;
+  background-color: #b73c37;
   font-weight: bold;
   letter-spacing: 6px;
   margin: 0px;
   padding: 10px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 95%;
+  width: 95%;
 }
 
 #restaurant-address {
@@ -338,7 +358,7 @@ nav h1 a {
 }
 
 #reviews-list li {
-  background: #EDE5CF;
+  background: #ede5cf;
   background-size: 10%, 90%;
   list-style-type: none;
   overflow: hidden;
@@ -351,14 +371,14 @@ nav h1 a {
   display: grid;
   grid-template-columns: 6% 43% 45% 6%;
   grid-template-rows: auto;
-  
-  grid-template-areas: 
+
+  grid-template-areas:
     ". reviewer date ."
     ". rating . ."
     ". comments comments .";
 
-    justify-items: start;
-    align-items: center;
+  justify-items: start;
+  align-items: center;
 }
 
 #reviews-list h2 {
@@ -367,7 +387,7 @@ nav h1 a {
 }
 
 #reviews-list h4 {
-  background-color: #2C2F3F;
+  background-color: #2c2f3f;
   color: white;
   letter-spacing: 1px;
   padding: 10% 8% 5% 8%;
@@ -397,7 +417,11 @@ nav h1 a {
 /*     Default layout is for iPhone 5/SE sizing 320 x 568      */
 
 @media only screen and (min-width: 350px) {
-  body,td,th,p,ul{
+  body,
+  td,
+  th,
+  p,
+  ul {
     font-size: 0.9375em;
   }
 
@@ -408,7 +432,6 @@ nav h1 a {
   #restaurants-list li {
     max-width: 350px;
   }
-  
 }
 
 @media only screen and (min-width: 425px) {
@@ -424,7 +447,9 @@ nav h1 a {
   }
 
   /* ====================== Restaurant Details ====================== */
-
+  #breadcrumb li + li:before {
+    padding: 10px;
+  }
 }
 
 @media only screen and (min-width: 500px) {
@@ -436,8 +461,7 @@ nav h1 a {
     min-height: 70px;
   }
 
-   /* ====================== Restaurant Details ====================== */
-
+  /* ====================== Restaurant Details ====================== */
 }
 
 @media only screen and (min-width: 600px) {
@@ -449,12 +473,12 @@ nav h1 a {
     text-align: center;
     padding: 3% 0 0 0;
     margin: 0 0 2% 0;
-    }
-  
-    .filter-selectors select {
-      width: 200px;
-      min-height: 75px;
-    }
+  }
+
+  .filter-selectors select {
+    width: 200px;
+    min-height: 75px;
+  }
 
   /* ====================== Restaurant Details ====================== */
 
@@ -482,6 +506,10 @@ nav h1 a {
   }
 
   /* ====================== Restaurant Details ====================== */
+  #breadcrumb li + li:before {
+    padding: 20px;
+  }
+
   #restaurant-img {
     max-width: 800px;
   }
@@ -494,8 +522,8 @@ nav h1 a {
 
 @media only screen and (min-width: 1024px) {
   body {
-   font-size: 1em;
- }
+    font-size: 1em;
+  }
 
   #map {
     padding: 0 0 40%;
@@ -513,7 +541,7 @@ nav h1 a {
 
 @media only screen and (min-width: 1440px) {
   body {
-     margin: 0 1%;
+    margin: 0 1%;
   }
 
   nav {
@@ -536,14 +564,14 @@ nav h1 a {
     text-align: end;
     margin-right: 25%;
     padding: 2% 0 0 0;
-}
-.filter-selectors {
-  justify-content: flex-end;
-}
-.filter-selectors select {
-  width: 250px;
-  min-height: 80px;
-}
+  }
+  .filter-selectors {
+    justify-content: flex-end;
+  }
+  .filter-selectors select {
+    width: 250px;
+    min-height: 80px;
+  }
 
   #restaurants-list {
     margin-top: 4%;
@@ -558,17 +586,29 @@ nav h1 a {
   }
 
   /* ====================== Restaurant Details ====================== */
+  #breadcrumb {
+    height: 100px;
+  }
+
+  #breadcrumb li {
+    font-size: 1.25em;
+  }
+
+  #breadcrumb li + li:before {
+    padding: 20px;
+  }
+
   #restaurant-container {
     display: grid;
     grid-template-columns: 800px auto;
     grid-template-rows: auto auto auto 400px auto auto;
-    grid-template-areas: 
-    "restaurantName ."
-    "restaurantImage ."
-    "restaurantImage restaurantAddress"
-    "restaurantImage restaurantHours"
-    "restaurantImage ."
-    "restaurantCuisine .";
+    grid-template-areas:
+      "restaurantName ."
+      "restaurantImage ."
+      "restaurantImage restaurantAddress"
+      "restaurantImage restaurantHours"
+      "restaurantImage ."
+      "restaurantCuisine .";
     justify-content: center;
   }
 
@@ -646,7 +686,13 @@ nav h1 a {
   }
 
   /* ====================== Restaurant Details ====================== */
+  #breadcrumb {
+    height: 125px;
+  }
 
+  #breadcrumb li {
+    font-size: 1.5em;
+  }
 }
 
 @media only screen and (min-width: 3000px) {
